correct css for form pages such as signup and login - issues with footer overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -181,7 +181,9 @@ a:focus {
 /* ---forms--- */
 
 .form-container {
-    height: 100vh;
+    height: auto;
+    background: white;
+    padding-bottom: 2rem;
 }
 
 /* ---navbar--- */
